[package]
name = "duns"
version = "0.1.0"
authors = ["Emil Segerbäck"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "0.4.0"

[[example]]
name = "ballistic"

[[example]]
name = "sphere_plane"

[dev-dependencies]
sdl2 = "0.32.2"
strum = "0.17.1"
strum_macros = "0.17.1"